--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div id="sec1" class="sec1"> </div>
-    <div id="sec3" class="sec3"> </div>
-    <div id="sec2" class="sec2"></div>
+    <div id="section1" class="section1"> </div>
+    <div id="section3" class="section3"> </div>
+    <div id="section2" class="section2"></div>
     <script type="module" src="./scripts/app.js"></script>
 </body>
 
